// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render should render a day 1`] = `
<div
  aria-hidden={false}
  className="day today"
  onMouseDown={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  title="2018-7-10"
>
  10
</div>
`;

exports[`render should render a focused/disabled/selected day 1`] = `
<div
  aria-hidden={false}
  className="day focused selected today"
  disabled={true}
  onMouseDown={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  title="2018-7-10"
>
  10
</div>
`;

exports[`render should render a selection start/end day 1`] = `
<div
  aria-hidden={false}
  className="day selected start end today"
  onMouseDown={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  title="2018-7-10"
>
  10
</div>
`;

exports[`render should render empty day 1`] = `
<div
  aria-hidden={true}
  className="day empty"
  onMouseDown={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  title={null}
>
  0
</div>
`;
